# LandslideML

./: .gitignore  LICENSE  NOTES.md  README.md  landslideml.toml  pyproject.toml  requirements.txt  setup.py
examples/: loading_data.py  training.csv  workflow_comparison_models.py  workflow_gbm.py  workflow_random_forest.py  workflow_svm.py
landslideml/: __init__.py  config.py  initializer.py  model.py  output.py  reader.py
testcase_data/: shapefile.shp  shapefile.shx
tests/: test_gbm_workflow.py  test_model_evaluate_model.py  test_model_mapping.py  test_model_plot_heatmap.py  test_model_predict.py  test_model_save_model.py  test_model_saving.py  test_model_setup.py  test_output_compare_features.py  test_output_heatmap.py  test_output_plot_map.py  test_reader.py  test_reader_generate_model.py  test_reader_load_model.py  test_svm_workflow.py
