[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "landslideml"
version = "0.0.1"
description = "A package for generation of landslide susceptibility mapping with ML models"
authors = [
  { name="Example Author", email="author@example.com" },
]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "geopandas",
  "seaborn",
  "joblib",
  "geopandas",
  "netcdf4",
  "xarray"]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  'Topic :: Scientific/Engineering',
]

[project.urls]
homepage = "https://github.com/ImProta/LandslideML"
issues = "https://github.com/ImProta/LandslideML/issues"
